<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal|fill_horizontal|fill_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/delete"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/AC"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/delone"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/del"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/percent"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/percent"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/plus"
                android:textColor="#28C76F"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/seven"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/eight"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/nine"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/del"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/deli"
                android:textColor="#28C76F"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/four"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/five"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/six"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/mult"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/mult"
                android:textColor="#28C76F"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/one"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/two"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/three"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/minus"
                android:textColor="#28C76F"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text=""
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/zero"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/point"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <Button
                android:id="@+id/total"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#101010"
                android:elegantTextHeight="false"
                android:text="@string/total"
                android:textColor="#28C76F"
                android:textSize="20sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editTextNumber"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#28C76F"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>